--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <div class="section-one">
             <h1 class="section-one__name">SYED MOHAMED YOUSUF BADURUDEEN</h1>
             <P class="section-one__role">WEB DEVELOPER</P>
-            <a class="section-one__contact" href="port.html">HOME</a>
+            <a class="section-one__contact" href="index.html">HOME</a>
         </div>
 
 
