--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 
            <div class="section-two">
              <h2 class="section-two__title">ABOUT ME</h2>
-             <p class="section-two__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab cumque doloribus, nesciunt dolorum perspiciatis officiis porro asperiores nam debitis quibusdam cum alias dignissimos optio eius illum aperiam rerum inventore pariatur eveniet necessitatibus autem aliquam earum vitae. Voluptatibus ratione unde eligendi. Quaerat qui nam quos incidunt, quis in veniam! Numquam nam nostrum ipsum. Assumenda saepe quibusdam, expedita nobis ratione dolorem illo nisi sit corrupti, architecto officia eius in ducimus voluptate fugit dolor ullam quos quae rerum eum modi culpa blanditiis repellat. Culpa laborum adipisci sequi odio consequatur accusamus dolorum consectetur. Culpa a, hic minima possimus delectus quaerat totam saepe quidem vel, ducimus neque voluptatibus sequi corrupti iusto voluptas molestiae velit dignissimos officia veniam officiis aspernatur fugit mollitia non id. Quasi autem illum maiores delectus optio accusantium labore odit? Quos reiciendis pariatur, saepe sint architecto sunt nihil cum consequatur alias? Architecto officiis nulla minima nihil nesciunt delectus consequatur numquam facilis voluptatem consectetur. Cumque, corporis! Omnis maiores voluptatibus sint facere tenetur qui itaque sunt soluta architecto cum iusto in beatae odit, expedita excepturi, magnam atque dolore obcaecati distinctio, quas fugiat vitae ex. Fuga veritatis inventore non consectetur, mollitia ad rem quia ipsa possimus assumenda sequi consequatur aperiam dolore, laborum amet doloribus, harum corporis.</p>
+             <p>Currently learning computer science graduate with basic
+              proficiency in programming languages such as c and Python.
+              Eager to start a career as a software engineer .where I can
+              apply my problem-solving ski ls and technical knowledge.
+              Passionate about contributing to innovative projects and
+              developing high-quality software solutions. Committed to
+              continuous learning and growth within the technology sector</p>
             </div>
             <div class="section-three">   
               <h2 class="section-three__title">INTRESTS</h2>
@@ -34,10 +40,7 @@
          <div class="section-four">
          <h2 class="section-four__title">MY PROJECT</h2>
             <ul class="section-four__desc">
-                <li>
-                  <h1>E-commerce website</h1>
-                </li>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel esse eius id laudantium quisquam dicta atque</p>
+                
                 <li>
                   <h1>portfolio</h1>
                 </li>
