--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li>
                   <h1>portfolio</h1>
                 </li>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa, veniam. Minima nesciunt exercitationem </p>
+              <p>this is a personal portfolio that i made using html and css with responsive to show case my skill </p>
 
             </ul>
         </div>
@@ -53,7 +53,7 @@
          <div class="section-five">
             <P class="section-five__title">SOCIAL MEDIA
               <a href="https://www.instagram.com/">INSTAGRAM</a>,
-              <a href="https://www.instagram.com/">LINKEDIN</a>
+              <a href="https://www.linkedin.com/feed/">LINKEDIN</a>
 
             </P>
             <p class="section-five__desc">&copy;BADURUDEEN</p>
